[metadata]
name = dpsim
version = 1.0.0
author = The DPsim Authors
author_email = mmirz@eonerc.rwth-aachen.de
description = dynamic real-time power system simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sogno-platform/dpsim
project_urls =
    Bug Tracker = https://github.com/sogno-platform/dpsim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
